--- a/index.html
+++ b/index.html
@@ -988,6 +988,9 @@
                             <p style="font-size: 1rem;">يونس براشد</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.03); padding: 12px; border-radius: 8px;">
+                      <p style="font-size: 1rem;">بخلال موسى عبد الحفيض</p>
+                        </div>
+                        <div style="background: rgba(255,255,255,0.03); padding: 12px; border-radius: 8px;"> 
                             <p style="font-size: 1rem;">بن قريش عبد الجليل</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.03); padding: 12px; border-radius: 8px;">
@@ -1218,4 +1221,5 @@
         });
     </script>
 </body>
+
 </html>
