--- a/index.html
+++ b/index.html
@@ -961,6 +961,12 @@
                             <p style="font-size: 1.1rem;">الأستاذ: عبد الحميد لعوبي </p>
                             <p style="color: #b0b0b0; font-size: 0.9rem;">مادة اللغة العربية</p>
                         </div>
+
+       <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; text-align: center;">
+                            <h4 style="color: var(--accent-color); margin-bottom: 10px;">تطوير الموقع</h4>
+                            <p style="font-size: 1.1rem;">اسلام مالك </p>
+                            <p style="color: #b0b0b0; font-size: 0.9rem;">الطور الرئيسي</p>
+                        </div>
                         
                         <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; text-align: center;">
                             <h4 style="color: var(--accent-color); margin-bottom: 10px;">تصميم الموقع</h4>
@@ -969,12 +975,6 @@
                         </div>
                     </div>
 
-                       <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; text-align: center;">
-                            <h4 style="color: var(--accent-color); margin-bottom: 10px;">تطوير الموقع</h4>
-                            <p style="font-size: 1.1rem;">مالك اسلام</p>
-                            <p style="color: #b0b0b0; font-size: 0.9rem;">المطور الرئيسي</p>
-                        </div>
-                    </div>
                 
                     <h4 style="color: var(--accent-color); margin: 25px 0 15px; text-align: center;">فريق المشاركين</h4>
                     <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px; text-align: center;">
@@ -1218,6 +1218,7 @@
 </body>
 
 </html>
+
 
 
 
