--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; text-align: center;">
                             <h4 style="color: var(--accent-color); margin-bottom: 10px;">تطوير الموقع</h4>
                             <p style="font-size: 1.1rem;">اسلام مالك </p>
-                            <p style="color: #b0b0b0; font-size: 0.9rem;">الطور الرئيسي</p>
+                            <p style="color: #b0b0b0; font-size: 0.9rem;">المطور الرئيسي</p>
                         </div>
                         
                         <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; text-align: center;">
@@ -1218,6 +1218,7 @@
 </body>
 
 </html>
+
 
 
 
