--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                     </div>
 
                 
-                    <h4 style="color: var(--accent-color); margin: 25px 0 15px; text-align: center;">فريق المشاركين</h4>
+                    <h4 style="color: var(--accent-color); margin: 25px 0 15px; text-align: center;">فريق البحث وجمع المعلومات </h4>
                     <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px; text-align: center;">
                    
                         <div style="background: rgba(255,255,255,0.03); padding: 12px; border-radius: 8px;">
@@ -1218,6 +1218,7 @@
 </body>
 
 </html>
+
 
 
 
